# fsnb-fastapi-app

./: .dockerignore  .env.examlpe  .gitignore  Dockerfile  Readme.md  docker-compose.yml  dump_project.py  project_dump.json  pyproject.toml  structure.txt
FSNB-2022_28_08_25/: База ТГ.xml  ГЭСНмр.xml  ГЭСНп.xml  ФСБЦ_Маш.xml
alembic/versions/: 2025_12_09_1325-33aa3a368fa8_users_profile_permission.py  2025_12_16_1347-940ec7a6bbce_fsnb_matcher_add_items.py  2025_12_16_1359-e306c008d156_fsnb_matcher_create_items_table.py  2025_12_23_1510-5390851f3bfd_train_feedback_tables.py
base_app/: main.py  manage.py
base_app/core/: config.py  dependencies.py  email_tokens.py  logging.py  security.py
base_app/crud/: permission_repository.py  profile_repository.py  user_repository.py  users.py
base_app/mailing/: email.py
base_app/scripts/: superuser.py
base_app/services/: auth_service.py
base_app/views/: __init__.py  admin.py  auth.py  web.py
src/: admin.py  app_logging.py  logging.py  main.py  manage.py
src/core/: config.py  dependencies.py  email_tokens.py  security.py
src/crud/: feedback_candidate_repository.py  feedback_label_repository.py  feedback_row_repository.py  feedback_session_repository.py  item_repository.py  permission_repository.py  profile_repository.py  user_repository.py
src/fsnb_matcher/: __init__.py
src/scripts/: create_fsnb_pg.py  init_vector_db.py  superuser.py
src/train/: __init__.py
static/css/: _global.css  _variables.css  style.css
static/js/: admin_actions.js  app.js  avatar-preview.js  (+2 more)
templates/: base.html  index.html
(+109 files in other folders)
